--- a/css/layout.css
+++ b/css/layout.css
@@ -1,7 +1,7 @@
 /********** Fixes **********/
 
 * {
-  margin:0;
+  margin:0px;
   padding:0;
   border:0;
   box-sizing: border-box;
@@ -23,5 +23,37 @@
 }
 
 /* Posititoning Classes */
+.col-1 {
+  float: left;
+  width: 32%;
+  background: #f0f0f0;
+  margin: 5px;
+}
 
+.col-2 {
+  float: left;
+  width: 66%; /* 32 *2 - 2 just 2 columns so only 2 for margin */
+  background: #f0f0f0;
+}
 
+.col-3 {
+  /* block element don't need width or float cause it will take 100% by default */
+  background: #f0f0f0;
+}
+
+/* Styling Classes */
+#details .wrapper{
+  background: #ccc;
+}
+
+#offset {
+  margin: 5px;
+}
+
+.milk_text {
+    font: bold 42px 'Elsie Swash Caps', cursive;
+    color: white;
+    text-shadow: 0 2px 3px #000;
+    margin: 0 0 10px;
+    padding: 20px 0 0px;
+}
